--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,9 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21
-yarn_mappings=1.21+build.2
-loader_version=0.15.11
+loader_version=0.16.0
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
-
-# Dependencies
-fabric_version=0.100.3+1.21
+maven_group=uk.debb
+archives_base_name=bat-uwu
